# immediate_calc

./: Cargo.toml  index.html  readme.md
assets/: icon.rgb  manifest.json  sw.js
src/: calculator.rs  literals.rs  main.rs  shapes.rs
src/calculator/: calculator_state.rs  measure.rs
src/literals/: messages.rs
src/shapes/: helpers.rs  parser.rs  shape_list.rs
src/shapes/shape_list/: helpers.rs  parser.rs
