[package]
name = "area_calculator"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
arboard = "3.3.0"
egui-modal = "0.3.3"
egui = "0.26"
eframe = { version = "0.26", default-features = false, features = [
  #"accesskit",      Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  #"default_fonts", # Embed the default egui fonts.
  "glow", #Use the glow rendering backend. Alternative: "wgpu".
  #"persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.55"
js-sys = "0.3.32"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[features]
lang_rus = []
